some small changes